--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                         class="dropdown-menu"
                                         role="menu"
                                         ng-controller="productController"
-                                        ng-init="getProductTypes()">
+                                        ">
 
                                         <li ng-repeat="type in types">
                                             <a href="#/product/filterProduct/{{type.sq_product_type}}">
@@ -582,36 +582,41 @@
 
     <!--load scripts-->
     <!--library-->
-    <script src="app/component/jquery-1.11.2.min.js"></script>
-    <script src="app/component/angular.js"></script>
-    <script src="app/component/angular-resource.min.js"></script>
-    <script src="app/component/angular-route.min.js"></script>
-    <script src="app/component/geral.js"></script>
-    <script src="app/component/bootstrap.min.js"></script>
-    <script src="app/component/nicescroll.min.js"></script>
-    <script src="app/component/angular-locale_pt-br.js"></script>
-    <script src="app/component/loading-bar.js"></script>
+    <script src="app/component/jquery-1.11.2.min.js" DEFFER></script>
+    <script src="app/component/angular.js" DEFFER></script>
+    <script src="app/component/angular-resource.min.js" DEFFER></script>
+    <script src="app/component/angular-route.min.js" DEFFER></script>
+    <script src="app/component/geral.js" DEFFER></script>
+    <script src="app/component/bootstrap.min.js" DEFFER></script>
+    <script src="app/component/nicescroll.min.js" DEFFER></script>
+    <script src="app/component/angular-locale_pt-br.js" DEFFER></script>
+    <script src="app/component/loading-bar.js" DEFFER></script>
+    <script src="app/component/angular-input-masks-standalone.min.js" DEFFER></script>
     <!--library-->
 
     <!--modules-->
-    <script src="app/controller/app.js"></script>
+    <script src="app/controller/app.js" DEFFER></script>
     <!--modules-->
 
     <!--Controllers-->
-    <script src="app/controller/userController.js"></script>
-    <script src="app/controller/loginController.js"></script>
-    <script src="app/controller/customerController.js"></script>
-    <script src="app/controller/productController.js"></script>
-    <script src="app/controller/purchaseController.js"></script>
+    <script src="app/controller/userController.js" DEFFER></script>
+    <script src="app/controller/loginController.js" DEFFER></script>
+    <script src="app/controller/customerController.js" DEFFER></script>
+    <script src="app/controller/productController.js" DEFFER></script>
+    <script src="app/controller/purchaseController.js" DEFFER></script>
     <!--Controllers-->
 
     <!--services-->
-    <script src="app/service/services.js"></script>
+    <script src="app/service/services.js" DEFFER></script>
     <!--services-->
 
     <!--directives-->
-    <script src="app/directive/dire.js"></script>
+    <script src="app/directive/dire.js" DEFFER></script>
     <!--directives-->
+
+    <!-- filters -->
+    <script src="app/filter/filters.js" DEFFER></script>
+    <!-- filters -->
 
     <!--load scripts-->
 
